<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recordSearchLayout"
        android:layout_width="410dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/recordSearchInput"
            android:layout_width="286dp"
            android:layout_height="49dp"
            android:hint="@string/management_hint_search"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColorHint="#757575"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recordSearchButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/recordSearchButton"
            android:layout_width="118dp"
            android:layout_height="49dp"
            android:backgroundTint="@color/material_dynamic_neutral30"
            android:text="@string/management_button_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recordCategoryLayout"
        android:layout_width="408dp"
        android:layout_height="59dp"
        android:layout_marginBottom="496dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordSearchLayout"
        app:layout_constraintVertical_bias="0.617">

        <TextView
            android:id="@+id/recordCategoryShelf"
            android:layout_width="82dp"
            android:layout_height="60dp"
            android:text="@string/management_category_shelf"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recordCategoryName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/recordCategoryName"
            android:layout_width="142dp"
            android:layout_height="58dp"
            android:layout_marginEnd="12dp"
            android:text="@string/management_category_name"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recordCategoryQuantity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/recordCategoryQuantity"
            android:layout_width="149dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:text="@string/management_category_quantity"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>